# gestalt

./: .gitignore  README.md
cortex/: Cargo.toml  README.md  build.rs
cortex/proto/: cortex.proto
cortex/src/: client.rs  main.rs  pb.rs  server.rs
