[package]
name = "cortex"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-stream = "0.3"

tonic = "0.11"
prost = "0.12"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
console = "0.15"

clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
bytes = "1.5"
uuid = { version = "1.7", features = ["v4"] }

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3.0"
